no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: cf2ee1d543feeacba150101494816882066a86f3

--- a/mobile/android/fenix/app/src/main/res/values-eu/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-eu/strings.xml
@@ -1597,6 +1597,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Gure
 pribatutasun
@@ -1645,6 +1659,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Cookien
@@ -1988,6 +2016,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Berria
 :
@@ -2032,6 +2074,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Gozatu
@@ -3398,6 +3454,161 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+Gomendatutako
+hedapenak
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Gehitu
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Gehitu
+hedapena
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 button
@@ -3750,6 +3961,56 @@ browser_menu_add_to_homescreen_2
 Gehitu
 hasierako
 pantailan
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Xiaomi
+gailuek
+aparteko
+baimenak
+behar
+litzakete
+hasierako
+pantailan
+lasterbideak
+gehitzeko
+.
+Egiaztatu
+zure
+ezarpenak
+mesedez
+.
 <
 /
 string
@@ -4879,9 +5140,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -6448,6 +6709,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 Ezagut
@@ -9626,74 +9894,9 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_request_support_button_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Bidali
 eskaera
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-request
-support
-button
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_request_support_button_3
-"
->
-Eskatu
-gunea
-gehitzea
 <
 /
 string
@@ -9739,90 +9942,12 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_title_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Eskatu
 gune
 honetarako
 euskarria
 ?
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-title
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
-The
-first
-parameter
-is
-the
-application
-name
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_title_3
-"
->
-Eskatu
-%
-1
-s
-(
-r
-)
-i
-cookieak
-automatikoki
-ukatzeko
 <
 /
 string
@@ -10014,74 +10139,10 @@ name
 "
 reduce_cookie_banner_unsupported_site
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Une
 honetan
 gune
-honetarako
-euskarririk
-ez
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-indicating
-cookie
-banner
-handling
-is
-currently
-not
-supported
-for
-this
-site
-this
-is
-shown
-as
-part
-of
-the
-protections
-panel
-with
-the
-tracking
-protection
-toggle
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_unsupported_site_1
-"
->
-Gune
 honetarako
 euskarririk
 ez
@@ -10280,20 +10341,6 @@ name
 "
 reduce_cookie_banner_details_panel_title_unsupported_site_request_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 %
 1
@@ -10320,70 +10367,6 @@ gehitzeko
 eskaera
 bidal
 dezakezu
-.
-<
-/
-string
->
-<
-!
--
--
-Title
-text
-for
-a
-detail
-explanation
-indicating
-cookie
-banner
-reducer
-didn
-'
-t
-work
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-panel
-in
-the
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_details_panel_title_unsupported_site_request_3
-"
->
-Une
-honetan
-ezin
-dugu
-gune
-honetako
-cookie
-laster
--
-leihorik
-automatikoki
-baztertu
 .
 <
 /
@@ -15299,6 +15282,76 @@ string
 !
 -
 -
+Preference
+switch
+title
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_title
+"
+>
+Bidali
+automatikoki
+hutsegite
+-
+txostenak
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+switch
+description
+for
+automatically
+submitting
+crash
+reports
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_automatically_submit_crashes_description
+"
+>
+Hutsegiteak
+gertatu
+ondorengoko
+abioan
+hutsegite
+-
+datuak
+automatikoki
+partekatzen
+ditu
+Mozillarekin
+<
+/
+string
+>
+<
+!
+-
+-
 Title
 for
 studies
@@ -19662,6 +19715,149 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+berrabiarazi
+egin
+behar
+izan
+da
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+Bidali
+automatikoki
+hutsegite
+-
+txostenak
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+Itxi
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
+"
+>
+Bidali
+hutsegite
+-
+txostena
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -20366,6 +20562,39 @@ string
 !
 -
 -
+Text
+indicating
+which
+folder
+a
+bookmark
+or
+folder
+will
+be
+saved
+in
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_save_in_label
+"
+>
+Gorde
+hemen
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 NAME
 editing
@@ -20383,6 +20612,38 @@ bookmark_name_label
 "
 >
 IZENA
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
+"
+>
+Izena
 <
 /
 string
@@ -20778,6 +21039,20 @@ name
 "
 bookmark_close_button_content_description
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
+"
 >
 Itxi
 laster
@@ -20861,6 +21136,215 @@ markarako
 menu
 -
 elementua
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+Laster
+-
+markarik
+ez
+oraindik
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+Gorde
+guneak
+nabigatu
+ahala
+.
+Hasi
+saioa
+sinkronizatutako
+beste
+gailuetatik
+laster
+-
+markak
+hartzeko
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
+"
+>
+Hasi
+saioa
+sinkronizatzeko
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_authenticated_description
+"
+>
+Gorde
+guneak
+nabigatu
+ahala
+.
+Sinkronizatutako
+beste
+gailuetatik
+laster
+-
+markak
+ere
+hartuko
+ditugu
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Gehitu
+laster
+-
+markak
+nabigatu
+ahala
+zure
+gune
+gogokoenak
+geroago
+aurki
+ditzazun
+.
 <
 /
 string
@@ -41492,6 +41976,20 @@ name
 "
 review_quality_check_first_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ikusi
 ea
@@ -41541,6 +42039,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -41581,6 +42086,20 @@ name
 =
 "
 review_quality_check_second_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Fidagarriak
@@ -41631,6 +42150,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -48680,6 +49206,40 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ez
+dut
+sync
+erabiltzen
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -48802,6 +49362,120 @@ eginbidea
 hobetzen
 .
 Momentutxo
+bat
+bakarrik
+izango
+da
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Lagundu
+Firefoxeko
+bilaketa
+hobetzen
+.
+Minutu
+bat
+bakarrik
+izango
+da
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Lagundu
+Firefoxeko
+sinkronizazioa
+hobetzen
+.
+Minutu
 bat
 bakarrik
 izango
@@ -48975,6 +49649,63 @@ zaude
 gustura
 Firefoxen
 bilaketaren
+esperientziarekin
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Zenbateraino
+zaude
+gustura
+Firefoxen
+sinkronizatzeko
 esperientziarekin
 ?
 <
@@ -49440,6 +50171,46 @@ debug_drawer_cfr_tools_reset_cfr_title
 >
 Berrezarri
 CFRak
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Glean
+arazketa
+-
+tresnak
 <
 /
 string
