--- a/mobile/android/focus-android/app/src/main/res/values-ar/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-ar/strings.xml
@@ -1299,6 +1299,77 @@ string
 name
 =
 "
+notification_erase_text_android_14
+"
+moz
+:
+RemovedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+notification
+description
+that
+pops
+up
+to
+remind
+the
+user
+that
+a
+browsing
+session
+is
+active
+for
+Android
+14
++
+.
+-
+-
+>
+<
+string
+name
+=
+"
+notification_erase_text_android_14_1
+"
+>
+.
+<
+/
+string
+>
+<
+string
+name
+=
+"
 notification_erase_text
 "
 >
@@ -8895,6 +8966,47 @@ string
 -
 -
 Preference
+summary
+inside
+Cookie
+banner
+reduction
+screen
+.
+Here
+you
+can
+set
+the
+cookie
+banner
+option
+to
+disabled
+or
+reject_all
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_reject_all_option_summary
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 for
 removing
 cookie
@@ -9345,6 +9457,191 @@ string
 !
 -
 -
+Long
+text
+for
+a
+detail
+explanation
+indicating
+what
+will
+happen
+if
+cookie
+banner
+handling
+is
+on
+for
+a
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+placeholder
+will
+be
+updated
+with
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_state_on_for_site
+"
+>
+%
+1
+s
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+text
+for
+a
+detail
+explanation
+indicating
+what
+will
+happen
+if
+cookie
+banner
+handling
+is
+off
+for
+a
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+The
+placeholder
+will
+be
+updated
+with
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_state_off_for_site2
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Long
+text
+for
+a
+detail
+explanation
+indicating
+that
+cookie
+banner
+reduction
+is
+not
+supported
+for
+the
+current
+site
+this
+is
+shown
+as
+part
+of
+the
+cookie
+banner
+panel
+in
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cookie_banner_exception_panel_description_site_is_not_supported
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 cancel
@@ -9517,6 +9814,83 @@ name
 cookie_banner_the_site_was_reported
 "
 >
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Contextual
+Feature
+Recommendation
+Popups
+-
+-
+>
+<
+!
+-
+-
+CFR
+for
+Cookie
+Banner
+(
+Banner
+Info
+Message
+)
+.
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+name
+%
+2
+s
+will
+be
+an
+active
+link
+using
+the
+string
+cfr_cookie_banner_link
+as
+text
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_cookie_banner
+"
+>
+%
+1
+s
+.
+\
+n
+\
+n
+%
+2
+s
 .
 <
 /
@@ -12545,6 +12919,127 @@ string
 -
 -
 The
+text
+of
+the
+error
+page
+for
+websites
+that
+do
+not
+support
+HTTPS
+when
+HTTPS
+-
+Only
+is
+turned
+on
+.
+%
+1
+s
+will
+get
+replaced
+with
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+"
+Firefox
+Focus
+"
+)
+.
+Contains
+a
+button
+that
+will
+redirect
+the
+user
+to
+Privacy
+&
+Security
+Screen
+-
+-
+>
+<
+string
+name
+=
+"
+errorpage_httpsonly_message2
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
+>
+<
+!
+[
+CDATA
+[
+%
+1
+s
+HTTPS
+.
+<
+a
+href
+=
+"
+%
+2
+s
+"
+>
+<
+/
+a
+>
+<
+br
+/
+>
+<
+br
+/
+>
+>
+>
+.
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
 document
 title
 and
@@ -12575,6 +13070,170 @@ name
 "
 mozac_browser_errorpages_security_bad_cert_title
 "
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+error
+message
+shown
+when
+a
+website
+has
+an
+invalid
+or
+expired
+SSL
+certificate
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_security_bad_cert_message
+"
+>
+<
+!
+[
+CDATA
+[
+.
+<
+br
+/
+>
+<
+br
+/
+>
+.
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+advanced
+certificate
+information
+shown
+when
+a
+website
+has
+an
+invalid
+SSL
+certificate
+.
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+app
+name
+and
+%
+2
+s
+will
+be
+replaced
+by
+website
+URL
+.
+It
+'
+s
+only
+shown
+when
+a
+website
+has
+an
+invalid
+SSL
+certificate
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_security_bad_cert_techInfo
+"
+>
+<
+!
+[
+CDATA
+[
+<
+label
+>
+.
+<
+/
+label
+>
+<
+br
+>
+<
+br
+>
+<
+label
+>
+%
+1
+s
+<
+b
+>
+%
+2
+s
+<
+/
+b
+>
+.
+<
+/
+label
+>
+]
+]
 >
 <
 /
@@ -12839,6 +13498,38 @@ string
 !
 -
 -
+CFR
+for
+Toolbar
+Delete
+Icon
+(
+Banner
+Info
+Message
+)
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_for_toolbar_delete_icon2
+"
+>
+-
+-
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Promote
 SearchWidget
 Dialog
@@ -12916,6 +13607,319 @@ promote_search_widget_dialog_title
 "
 >
 !
+<
+/
+string
+>
+<
+!
+-
+-
+Banner
+Info
+Message
+than
+will
+appear
+when
+user
+first
+enters
+in
+the
+app
+.
+The
+location
+is
+at
+the
+toolbar
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cfr_for_start_browsing
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+subtitle
+of
+promote
+search
+widget
+dialog
+.
+%
+1
+s
+will
+get
+replaced
+with
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+"
+Focus
+"
+)
+-
+-
+>
+<
+string
+name
+=
+"
+promote_search_widget_dialog_subtitle
+"
+>
+%
+1
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Messages
+explaining
+how
+to
+exit
+fullscreen
+mode
+-
+-
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
 <
 /
 string
