--- a/mobile/android/focus-android/app/src/main/res/values-eu/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-eu/strings.xml
@@ -1856,6 +1856,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Bilatu
 Focus
@@ -1920,6 +1927,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Bilatu
@@ -1987,6 +2001,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Bilatu
@@ -2056,6 +2077,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Bilatu
 Focus
@@ -2111,6 +2139,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -8309,6 +8344,49 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+Itxi
+beste
+fitxak
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -8367,6 +8445,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Deskargatu
@@ -8527,6 +8612,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -8650,6 +8742,14 @@ name
 "
 your_rights_content3
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -8770,6 +8870,13 @@ name
 =
 "
 your_rights_content4
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -8909,6 +9016,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -11617,6 +11731,13 @@ name
 =
 "
 preference_studies_summary
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Noizean
@@ -14371,6 +14492,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -15677,6 +15805,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Pantaila
 osotik
@@ -15719,10 +15861,147 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Pantaila
 osotik
 irteteko
+arrastatu
+goitik
+eta
+sakatu
+atzera
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Irteteko
+arrastatu
+goitik
+eta
+erabili
+atzerako
+keinua
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Irteteko
 arrastatu
 goitik
 eta
