--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-eu/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-eu/strings.xml
@@ -1057,75 +1057,6 @@ string
 name
 =
 "
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Gehitu
-erabiltzaile
--
-izena
-gordetako
-pasahitzari
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-username
-for
-an
-existing
-login
-without
-a
-username
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_login_add_username_headline_2
 "
 >
@@ -2531,14 +2462,14 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description
+mozac_feature_prompts_suggest_strong_password_description_2
 "
 moz
 :
 removedIn
 =
 "
-130
+133
 "
 tools
 :
@@ -2557,16 +2488,14 @@ pasahitz
 sendoa
 erabiliz
 .
-Gorde
-pasahitzak
-zure
+Zure
 kontuan
-eta
-izan
-itzazu
-esku
--
-eskura
+gordeko
+da
+etorkizunean
+erabili
+ahal
+izateko
 .
 <
 /
@@ -2593,12 +2522,12 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password_description_2
+mozac_feature_prompts_suggest_strong_password_description_3
 "
 >
 Babestu
 zure
-kontuak
+kontua
 ausaz
 sortutako
 pasahitz
@@ -3964,6 +3893,13 @@ name
 =
 "
 mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
